PharmaDemo/src/objects/Sample_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Sample Inventory</relationshipLabel>
        <relationshipName>Sample_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Sample Inventory</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>SI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Inventory</pluralLabel>
    <recordTypes>
        <fullName>Inventory</fullName>
        <active>true</active>
        <label>Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>